--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,226 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  align-items: center;
+  background-image: url("./images/pokerwallpaper.png");
+  background-repeat: repeat;
+  background-size: contain;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
+}
+
+.poker-table {
+  background-color: #800000;
+  border-radius: 200px;
+  border: 5px solid #c28502;
+  height: 350px;
+  margin-top: 20%;
+  width: 800px;
+}
+
+.table-wrapper {
+  align-items: flex-start;
+  background-color: black;
+  border: 4px solid #c28502;
+  display: flex;
+  height: 900px;
+  width: 1150px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 50px;
+  position: relative;
+}
+
+.card {
+  background-color: #D3D3D3;
+  border: 2px solid black;
+  border-radius: 5px;
+  height: 50px;
+  margin: 3px;
+  width: 35px;
+}
+
+.cards {
+  display: flex;
+}
+
+.active-card:hover {
+  box-shadow: 0 0 10px 4px #c28502;
+}
+
+.selected-card {
+  box-shadow: 0 0 10px 4px #c28502;
+  background-color: white;
+}
+
+.community-card {
+  background-color: #D3D3D3;
+  border: 2px solid black;
+  border-radius: 5px;
+  height: 80px;
+  margin: 5px;
+  width: 55px;
+}
+
+.community-cards {
+  bottom: 58%;
+  display: flex;
+  justify-content: space-between;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 50%);
+}
+
+.community-cards-group {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 15px;
+}
+
+.deck {
+  align-items: center;
+  bottom: 3%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+}
+
+.deck-card {
+  background-color: white;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  flex: 0 0 auto;
+  height: 50px;
+  margin: 5px;
+  width: 35px;
+  font-size: 20px;
+  transition: box-shadow 0.2s ease;
+}
+
+.deck-card:hover {
+  box-shadow: 0 0 5px 4px #c28502;
+}
+
+.deck-group {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 3px;
+  border: 3px solid #c28502;
+  margin: 7px;
+  border-radius: 10px;
+  width: 250px;
+  background-color: #800000;
+}
+
+.suit-image {
+  width: 25px;
+  height: 25px;
+  padding-left: 2px;
+}
+
+.nav-bar {
+  display: flex;
+  position: absolute;
+  top: 45px;
+}
+
+.nav-link {
+  background-color: #c28502;
+  border: 4px solid #c28502;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 20px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.nav-link:hover {
+  background-color: black;
+  color: #c28502;
+}
+
+.nav-link:active {
+  background-color: #c28502;
+  color: black;
+}
+
+.active-link {
+  color: #c28502;
+  background-color: black;
+}
+
+.player {
+  align-items: center;
   color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
+  text-shadow: 5px 5px 10px #c28502;
 }
 
-.App-link {
-  color: #61dafb;
+.player-button {
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-player-button {
+  border-radius: 50px;
+  box-shadow: 2px 2px 10px 0.5px #c28502;
+  width: 25px;
+  height: 25px;
+  margin-top: 15px;
+  margin-left: 8px;
+  font-weight: bold
 }
+
+.player-6:nth-child(1) {
+  transform: translate(-30%, 220%) translate(400px);
+}
+.player-6:nth-child(2) {
+  transform: translate(-70%, 120%) translate(400px);
+}
+.player-6:nth-child(3) {
+  transform: translate(-100%, -140%) translate(400px);
+}
+.player-6:nth-child(4) {
+  transform: translate(-70%, -380%) translate(400px);
+}
+.player-6:nth-child(5) {
+  transform: translate(-30%, -480%) translate(400px);
+}
+.player-6:nth-child(6) {
+  transform: translate(0%, -440%) translate(400px);
+}
+
+.player-8:nth-child(1) {
+  transform: translate(-35%, 220%) translate(400px);
+}
+.player-8:nth-child(2) {
+  transform: translate(-65%, 120%) translate(400px);
+}
+.player-8:nth-child(3) {
+  transform: translate(-100%, -60%) translate(400px);
+}
+.player-8:nth-child(4) {
+  transform: translate(-100%, -305%) translate(400px);
+}
+.player-8:nth-child(5) {
+  transform: translate(-65%, -480%) translate(400px);
+}
+.player-8:nth-child(6) {
+  transform: translate(-35%, -580%) translate(400px);
+}
+.player-8:nth-child(7) {
+  transform: translate(-2%, -595%) translate(400px);
+}
+.player-8:nth-child(8) {
+  transform: translate(-2%, -550%) translate(400px);
+}
+
+/*
+
+998100
+*/
