--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,35 @@
   border: 5px solid #c28502;
   height: 350px;
   margin-top: 20%;
+  margin-right: 130px;
   width: 800px;
+}
+
+.reset-button {
+  display: flex;
+  width: 120px;
+  height: 60px;
+  color: black;
+  align-items: center;
+  background-color: #c28502;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 15px;
+  border: 4px solid #c28502;
+  margin-top: 590px;
+  border-radius: 3px;
+  margin-right: 30px;
+  transition: background-color 0.3s ease;
+}
+
+.reset-button:hover {
+  background-color: black;
+  color: #c28502;
+}
+
+.reset-button:active {
+  background-color: #c28502;
+  color: black;
 }
 
 .table-wrapper {
@@ -36,6 +64,8 @@
   height: 50px;
   margin: 3px;
   width: 35px;
+  color: black;
+  font-size: 20px;
   transition: box-shadow 0.2s ease;
 }
 
@@ -63,6 +93,7 @@
   left: 50%;
   position: absolute;
   transform: translate(-50%, 50%);
+  font-size: 30px;
 }
 
 .community-cards-group {
@@ -119,10 +150,24 @@
   background-color: #800000;
 }
 
+.used-deck-card {
+  background-color: #a9a9a9;
+}
+
+.used-deck-card:hover {
+  box-shadow: 0 0 5px 4px transparent;
+}
+
 .suit-image {
   width: 25px;
   height: 25px;
   padding-left: 2px;
+}
+
+.community-suit-image {
+  width: 35px;
+  height: 35px;
+  padding-left: 6px;
 }
 
 .nav-bar {
