--- a/src/App.css
+++ b/src/App.css
@@ -5,42 +5,88 @@
   background-size: contain;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-}
-
-.poker-table {
-  background-color: #800000;
-  border-radius: 200px;
-  border: 5px solid #c28502;
-  height: 350px;
-  margin-top: 20%;
-  margin-right: 130px;
-  width: 800px;
-}
-
-.reset-button {
-  display: flex;
-  width: 120px;
-  height: 60px;
-  color: black;
-  align-items: center;
-  background-color: #c28502;
-  justify-content: center;
-  font-weight: bold;
-  font-size: 15px;
-  border: 4px solid #c28502;
-  margin-top: 590px;
-  border-radius: 3px;
-  margin-right: 30px;
-  transition: background-color 0.3s ease;
-}
-
-.reset-button:hover {
+  height: 1900px;
   background-color: black;
-  color: #c28502;
 }
 
-.reset-button:active {
+.title {
+  color: #c28502;
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.chat-bot {
+  position: absolute;
+  border: 4px solid #c28502;
+  width: 900px;
+  height: 400px;
+  margin: 30px;
+  color: #c28502;
+  display: flex;
+  padding-top: 15px;
+  font-size: 30px;
+  top: 900px;
+  flex-direction: column;
+  align-items: center;
+  background-color: #800000;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+
+.input-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 80%;
+  margin-bottom: 30px;
+}
+
+.input-button {
+  background-color: #c28502;
+  height: 46px;
+  width: 100%;
+  border-radius: 10px;
+  color: black;
+  border-color: transparent;
+  padding-left: 10px;
+  box-shadow: 0px 0px 6px 1px #c28502;
+  font-size: 15px;
+  padding-top: 10px;
+  overflow-wrap: break-word;
+  font-family: "Times New Roman", Times, serif;
+  max-height: 100px;
+}
+
+.input-button::placeholder {
+  color: black;
+}
+
+.input-button:focus {
+  outline: none;
+}
+
+.submit-button {
+  position: absolute;
+  background-color: black;
+  width: 70px;
+  height: 35px;
+  color: #c28502;
+  right: 100px;
+  border-radius: 10px;
+  border-color: transparent;
+  transition: background-color 0.5s ease;
+  font-weight: bold;
+  margin-bottom: 13px;
+}
+
+.submit-button:hover {
+  box-shadow: 0px 0px 3px 1px black;
+}
+
+.submit-button:active {
   background-color: #c28502;
   color: black;
 }
@@ -50,11 +96,76 @@
   background-color: black;
   border: 4px solid #c28502;
   display: flex;
-  height: 900px;
+  height: 1450px;
   width: 1150px;
   justify-content: center;
-  margin: 50px;
   position: relative;
+}
+
+.poker-table {
+  background-color: #800000;
+  border-radius: 200px;
+  border: 5px solid #c28502;
+  height: 350px;
+  margin-top: 20%;
+  margin-right: 170px;
+  width: 800px;
+}
+
+.descriptions-box {
+  color: #c28502;
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  font-size: 30px;
+  flex-direction: row;
+}
+
+.descriptions-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 400px;
+  height: 300px;
+  text-align: center;
+  padding: 20px;
+}
+
+.description-title {
+  font-weight: bold;
+  padding-bottom: 20px;
+  font-size: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reset-button {
+  display: flex;
+  width: 120px;
+  height: 60px;
+  color: #c28502;
+  align-items: center;
+  background-color: black;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 15px;
+  border: 4px solid #c28502;
+  margin-top: 590px;
+  border-radius: 3px;
+  margin-left: 40px;
+  transition: background-color 0.3s ease;
+}
+
+.reset-button:hover {
+  background-color: #c28502;
+  color: black;
+}
+
+.reset-button:active {
+  background-color: black;
+  color: #c28502;
 }
 
 .card {
@@ -87,7 +198,7 @@
 }
 
 .community-cards {
-  bottom: 58%;
+  top: 300px;
   display: flex;
   justify-content: space-between;
   left: 50%;
@@ -113,7 +224,7 @@
 
 .deck {
   align-items: center;
-  bottom: 3%;
+  top: 675px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -280,4 +391,3 @@
   transform: translate(210%, -575%) translate(400px);
   width: 150px;
 }
-
