--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-size: contain;
   display: flex;
   flex-direction: column;
-  height: 1900px;
+  height: 2000px;
   background-color: black;
 }
 
@@ -66,6 +66,16 @@
 
 .input-button:focus {
   outline: none;
+}
+
+.output {
+  color: white;
+  background-color: #800000;
+  width: 700px;
+  height: 200px;
+  border: 4px solid #c28502;
+  border-radius: 10px;
+  font-size: 25px;
 }
 
 .submit-button {
