--- a/src/App.css
+++ b/src/App.css
@@ -69,13 +69,19 @@
 }
 
 .output {
-  color: white;
-  background-color: #800000;
-  width: 700px;
+  color: black;
+  background-color: #c28502;
+  width: 715px;
   height: 200px;
+  overflow-y: auto;
+  word-wrap: break-word;
   border: 4px solid #c28502;
   border-radius: 10px;
   font-size: 25px;
+  box-sizing: border-box;
+  padding: 15px;
+  box-shadow: 0px 0px 6px 1px #c28502;
+  text-align: center;
 }
 
 .submit-button {
