--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   position: absolute;
   border: 4px solid #c28502;
   width: 900px;
-  height: 400px;
+  height: 450px;
   margin: 30px;
   color: #c28502;
   display: flex;
@@ -34,6 +34,14 @@
   background-color: #800000;
   justify-content: space-between;
   border-radius: 10px;
+}
+
+.note {
+  font-size: 20px;
+  width: 700px;
+  text-align: center;
+  position: absolute;
+  margin-top: 50px;
 }
 
 .input-container {
@@ -71,8 +79,8 @@
 .output {
   color: black;
   background-color: #c28502;
-  width: 715px;
-  height: 200px;
+  width: 720px;
+  height: 215px;
   overflow-y: auto;
   word-wrap: break-word;
   border: 4px solid #c28502;
@@ -82,6 +90,8 @@
   padding: 15px;
   box-shadow: 0px 0px 6px 1px #c28502;
   text-align: center;
+  position: absolute;
+  margin: 120px;
 }
 
 .submit-button {
