--- a/src/App.css
+++ b/src/App.css
@@ -4,317 +4,41 @@
   background-repeat: repeat;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-position: center;
 }
 
 .title {
   color: #c28502;
   display: flex;
   align-items: center;
-  padding: 30px;
-  font-size: 30px;
+  padding: 5vh;
+  font-size: 3em;
   font-weight: bold;
-}
-
-.chat-bot {
-  position: absolute;
-  border: 4px solid #c28502;
-  width: 900px;
-  height: 450px;
-  margin: 30px;
-  color: #c28502;
-  display: flex;
-  padding-top: 15px;
-  font-size: 30px;
-  top: 900px;
-  flex-direction: column;
-  align-items: center;
-  background-color: #800000;
-  justify-content: space-between;
-  border-radius: 10px;
-}
-
-.note {
-  font-size: 20px;
-  width: 700px;
-  text-align: center;
-  position: absolute;
-  margin-top: 50px;
-}
-
-.input-container {
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 80%;
-  margin-bottom: 30px;
-}
-
-.input-button {
-  background-color: #c28502;
-  height: 46px;
-  width: 100%;
-  border-radius: 10px;
-  color: black;
-  border-color: transparent;
-  padding-left: 10px;
-  box-shadow: 0px 0px 6px 1px #c28502;
-  font-size: 15px;
-  padding-top: 10px;
-  overflow-wrap: break-word;
-  font-family: "Times New Roman", Times, serif;
-  max-height: 100px;
-}
-
-.input-button::placeholder {
-  color: black;
-}
-
-.input-button:focus {
-  outline: none;
-}
-
-.output {
-  color: black;
-  background-color: #c28502;
-  width: 720px;
-  height: 215px;
-  overflow-y: auto;
-  word-wrap: break-word;
-  border: 4px solid #c28502;
-  border-radius: 10px;
-  font-size: 25px;
-  box-sizing: border-box;
-  padding: 15px;
-  box-shadow: 0px 0px 6px 1px #c28502;
-  text-align: center;
-  position: absolute;
-  margin: 120px;
-}
-
-.submit-button {
-  position: absolute;
-  background-color: black;
-  width: 70px;
-  height: 35px;
-  color: #c28502;
-  right: 100px;
-  border-radius: 10px;
-  border-color: transparent;
-  transition: background-color 0.5s ease;
-  font-weight: bold;
-  margin-bottom: 13px;
-}
-
-.submit-button:hover {
-  box-shadow: 0px 0px 3px 1px black;
-}
-
-.submit-button:active {
-  background-color: #c28502;
-  color: black;
 }
 
 .table-wrapper {
-  align-items: flex-start;
-  background-color: black;
-  border: 4px solid #c28502;
   display: flex;
-  height: 1450px;
-  width: 1150px;
-  justify-content: center;
-  position: relative;
-}
-
-.poker-table {
-  background-color: #800000;
-  border-radius: 200px;
-  border: 5px solid #c28502;
-  height: 350px;
-  margin-top: 20%;
-  margin-right: 170px;
-  width: 800px;
-}
-
-.descriptions-box {
-  color: #c28502;
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  font-size: 30px;
-  flex-direction: row;
-}
-
-.descriptions-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  width: 400px;
-  height: 300px;
-  text-align: center;
-  padding: 20px;
-}
-
-.description-title {
-  font-weight: bold;
-  padding-bottom: 20px;
-  font-size: 35px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.reset-button {
-  display: flex;
-  width: 120px;
-  height: 60px;
-  color: #c28502;
   align-items: center;
   background-color: black;
-  justify-content: center;
-  font-weight: bold;
-  font-size: 15px;
   border: 4px solid #c28502;
-  margin-top: 590px;
-  border-radius: 3px;
-  margin-left: 40px;
-  transition: background-color 0.3s ease;
-}
-
-.reset-button:hover {
-  background-color: #c28502;
-  color: black;
-}
-
-.reset-button:active {
-  background-color: black;
-  color: #c28502;
-}
-
-.card {
-  background-color: #a9a9a9;
-  border: 2px solid transparent;
-  border-radius: 5px;
-  height: 50px;
-  margin: 3px;
-  width: 35px;
-  color: black;
-  font-size: 20px;
-  transition: box-shadow 0.2s ease;
-}
-
-.cards {
-  display: flex;
-}
-
-.active-card:hover {
-  box-shadow: 0 0 10px 4px #c28502;
-}
-
-.community-card {
-  background-color: #a9a9a9;
-  border-radius: 5px;
-  height: 80px;
-  margin: 5px;
-  width: 55px;
-  transition: box-shadow 0.2s ease;
-}
-
-.community-cards {
-  top: 300px;
-  display: flex;
+  height: 180vh;
+  width: 85%;
   justify-content: space-between;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, 50%);
-  font-size: 30px;
-}
-
-.community-cards-group {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 15px;
-}
-
-.community-card:hover {
-  box-shadow: 0 0 10px 4px #c28502;
-}
-
-.selected-card {
-  box-shadow: 0 0 10px 4px #c28502;
-  background-color: white;
-}
-
-.deck {
-  align-items: center;
-  top: 675px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
-}
-
-.deck-card {
-  background-color: white;
-  border: 2px solid transparent;
-  border-radius: 5px;
-  flex: 0 0 auto;
-  height: 50px;
-  margin: 5px;
-  width: 35px;
-  font-size: 20px;
-  transition: box-shadow 0.2s ease;
-}
-
-.deck-card:hover {
-  box-shadow: 0 0 5px 4px #c28502;
-}
-
-.deck-group {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 3px;
-  border: 3px solid #c28502;
-  margin: 7px;
-  border-radius: 10px;
-  width: 250px;
-  background-color: #800000;
-}
-
-.used-deck-card {
-  background-color: #a9a9a9;
-}
-
-.used-deck-card:hover {
-  box-shadow: 0 0 5px 4px transparent;
-}
-
-.suit-image {
-  width: 25px;
-  height: 25px;
-  padding-left: 2px;
-}
-
-.community-suit-image {
-  width: 35px;
-  height: 35px;
-  padding-left: 6px;
 }
 
 .nav-bar {
   display: flex;
-  position: absolute;
-  top: 45px;
+  margin-top: 4%;
 }
 
 .nav-link {
   background-color: #c28502;
   border: 4px solid #c28502;
   color: black;
-  font-size: 18px;
+  font-size: 1.2em;
   font-weight: bold;
   padding: 20px;
   text-decoration: none;
@@ -336,12 +60,295 @@
   background-color: black;
 }
 
+.poker-table {
+  display: flex;
+  flex-direction: column;
+  background-color: #800000;
+  border-radius: 200px;
+  border: 5px solid #c28502;
+  height: 20%;
+  width: 70%;
+  margin-top: 10%;
+  position: relative;
+}
+
+.community-cards {
+  display: flex;
+  justify-content: space-between;
+  font-size: 2em;
+  z-index: 1;
+  position: absolute;
+  top: 100px;
+  left: 200px;
+}
+
+.community-cards-group {
+  display: flex;
+  margin: 0 5%;
+}
+
+.community-card:hover {
+  box-shadow: 0 0 10px 4px #c28502;
+}
+
+.below-table-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.reset-button {
+  margin-top: 8%;
+  display: flex;
+  width: 10%;
+  height: 5%;
+  color: #c28502;
+  align-items: center;
+  background-color: black;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1em;
+  border: 4px solid #c28502;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.reset-button:hover {
+  background-color: #c28502;
+  color: black;
+}
+
+.reset-button:active {
+  background-color: black;
+  color: #c28502;
+}
+
+.deck {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin-top: 2%;
+}
+
+.deck-card {
+  background-color: white;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  flex: 0 0 auto;
+  height: 25%;
+  margin: 2%;
+  width: 13%;
+  font-size: 1.3em;
+  transition: box-shadow 0.2s ease;
+}
+
+.deck-card:hover {
+  box-shadow: 0 0 5px 4px #c28502;
+}
+
+.deck-group {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 3px;
+  border: 3px solid #c28502;
+  margin: 1%;
+  border-radius: 10px;
+  width: 20%;
+  background-color: #800000;
+}
+
+.chat-bot {
+  border: 4px solid #c28502;
+  width: 90%;
+  height: 40%;
+  color: #c28502;
+  display: flex;
+  font-size: 2em;
+  flex-direction: column;
+  align-items: center;
+  background-color: #800000;
+  border-radius: 10px;
+  margin-top: 2%;
+  padding-top: 2%;
+}
+
+.note {
+  font-size: 0.7em;
+  width: 80%;
+  text-align: center;
+  padding-top: 1%;
+}
+
+.output {
+  color: black;
+  background-color: #c28502;
+  width: 70%;
+  height: 100%;
+  overflow-y: auto;
+  word-wrap: break-word;
+  border: 4px solid #c28502;
+  border-radius: 10px;
+  font-size: 0.7em;
+  box-shadow: 0px 0px 6px 1px #c28502;
+  text-align: center;
+  margin-top: 2%;
+  margin-left: 1%;
+}
+
+.input-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 70%;
+  height: 100%;
+  padding-bottom: 2%;
+}
+
+.input-button {
+  background-color: #c28502;
+  padding-bottom: 1%;
+  width: 100%;
+  border-radius: 10px;
+  color: black;
+  border-color: transparent;
+  padding-left: 1.5%;
+  box-shadow: 0px 0px 6px 1px #c28502;
+  font-size: 0.5em;
+  padding-top: 1%;
+  overflow-wrap: break-word;
+  font-family: "Times New Roman", Times, serif;
+  margin-right: -10%;
+  margin-top: 3%;
+}
+
+.input-button::placeholder {
+  color: black;
+}
+
+.input-button:focus {
+  outline: none;
+}
+
+.submit-button {
+  background-color: black;
+  width: 8%;
+  height: 30%;
+  color: #c28502;
+  border-radius: 10px;
+  border-color: transparent;
+  transition: background-color 0.5s ease;
+  transition: box-shadow 0.3s ease;
+  font-weight: bold;
+  margin-bottom: 1.5%;
+  margin-right: 1%;
+}
+
+.submit-button:hover {
+  box-shadow: 0px 0px 3px 1px black;
+}
+
+.submit-button:active {
+  background-color: #c28502;
+  color: black;
+}
+
+.descriptions-box {
+  color: #c28502;
+  display: flex;
+  align-items: center;
+  padding: 5%;
+  font-size: 1.7em;
+  flex-direction: row;
+}
+
+.descriptions-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 80%;
+  text-align: center;
+  padding: 2%;
+}
+
+.description-title {
+  font-weight: bold;
+  padding-bottom: 8%;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background-color: #a9a9a9;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  height: 7vh;
+  margin: 2%;
+  width: 100%;
+  color: black;
+  font-size: 2em;
+  transition: box-shadow 0.2s ease;
+}
+
+.cards {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.active-card:hover {
+  box-shadow: 0 0 10px 4px #c28502;
+}
+
+.community-card {
+  background-color: #a9a9a9;
+  border-radius: 5px;
+  height: 10vh;
+  margin: 2%;
+  width: 8vh;
+  transition: box-shadow 0.2s ease;
+}
+
+.selected-card {
+  box-shadow: 0 0 10px 4px #c28502;
+  background-color: white;
+}
+
+.used-deck-card {
+  background-color: #a9a9a9;
+}
+
+.used-deck-card:hover {
+  box-shadow: 0 0 5px 4px transparent;
+}
+
+.suit-image {
+  width: 60%;
+  height: 45%;
+  padding-left: 10%;
+}
+
+.community-suit-image {
+  width: 60%;
+  height: 50%;
+  padding-left: 10%;
+}
+
 .player {
   align-items: center;
   color: white;
   display: flex;
   flex-direction: column;
-  font-size: 13px;
+  font-size: 0.6em;
   text-shadow: 5px 5px 10px #c28502;
 }
 
@@ -353,64 +360,67 @@
 .add-player-button {
   border-radius: 50px;
   box-shadow: 2px 2px 10px 0.5px #c28502;
-  width: 25px;
-  height: 25px;
-  margin-top: 15px;
-  margin-left: 8px;
+  width: 27%;
+  height: 50%;
+  margin-top: 15%;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 1em;
 }
 
 .player-6:nth-child(1) {
   transform: translate(120%, 180%) translate(400px);
-  width: 100px;
+  width: 11%;
 }
 .player-6:nth-child(2) {
   transform: translate(-200%, 80%) translate(400px);
-  width: 100px;
+  width: 11%;
 }
 .player-6:nth-child(3) {
   transform: translate(-100%, -140%) translate(400px);
+  width: 11%;
 }
 .player-6:nth-child(4) {
   transform: translate(-150%, -370%) translate(400px);
-  width: 150px;
+  width: 11%;
 }
 .player-6:nth-child(5) {
   transform: translate(60%, -470%) translate(400px);
-  width: 150px;
+  width: 11%;
 }
 .player-6:nth-child(6) {
   transform: translate(0%, -440%) translate(400px);
+  width: 11%;
 }
 
 .player-8:nth-child(1) {
-  transform: translate(80%, 170%) translate(400px);
-  width: 100px;
+  transform: translate(570%, 170%);
+  width: 11%;
 }
 .player-8:nth-child(2) {
-  transform: translate(-170%, 70%) translate(400px);
-  width: 100px;
+  transform: translate(230%, 70%);
+  width: 11%;
 }
 .player-8:nth-child(3) {
-  transform: translate(-380%, -70%) translate(400px);
-  width: 120px;
+  transform: translate(-45%, -80%);
+  width: 11%;
 }
 .player-8:nth-child(4) {
-  transform: translate(-100%, -305%) translate(400px);
+  transform: translate(-45%, -305%);
+  width: 11%;
 }
 .player-8:nth-child(5) {
-  transform: translate(-130%, -465%) translate(400px);
-  width: 150px;
+  transform: translate(230%, -465%);
+  width: 11%;
 }
 .player-8:nth-child(6) {
-  transform: translate(35%, -565%) translate(400px);
-  width: 150px;
+  transform: translate(570%, -565%);
+  width: 11%;
 }
 .player-8:nth-child(7) {
-  transform: translate(-2%, -595%) translate(400px);
+  transform: translate(850%, -595%);
+  width: 11%;
 }
 .player-8:nth-child(8) {
-  transform: translate(210%, -575%) translate(400px);
-  width: 150px;
+  transform: translate(850%, -575%);
+  width: 11%;
 }
