--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 .App {
-  align-items: center;
   background-image: url("./images/pokerwallpaper.png");
-  background-repeat: repeat;
+  align-items: center;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   background-position: center;
+}
+
+body {
+  margin: 0;
 }
 
 .title {
@@ -16,6 +19,9 @@
   padding: 5vh;
   font-size: 3em;
   font-weight: bold;
+  @media (max-width: 740px) {
+    font-size: 2em;
+  }
 }
 
 .table-wrapper {
@@ -27,11 +33,15 @@
   height: 180vh;
   width: 85%;
   justify-content: space-between;
+  @media (max-width: 740px) {
+    height: 120vh;
+  }
 }
 
 .nav-bar {
   display: flex;
   margin-top: 4%;
+  
 }
 
 .nav-link {
@@ -43,6 +53,15 @@
   padding: 20px;
   text-decoration: none;
   transition: background-color 0.3s ease;
+  @media (max-width: 740px) {
+    padding: 10px;
+    width: 80px;
+    font-size: 0.8em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .nav-link:hover {
@@ -69,7 +88,7 @@
   height: 20%;
   width: 70%;
   margin-top: 10%;
-  position: relative;
+  align-items: center;
 }
 
 .community-cards {
@@ -77,9 +96,19 @@
   justify-content: space-between;
   font-size: 2em;
   z-index: 1;
-  position: absolute;
-  top: 100px;
-  left: 200px;
+  align-items: center;
+  margin-top: 10%;
+  margin-right: 10%;
+  @media (max-width: 740px) {
+    font-size: 1em;
+    margin-right: 25%;
+    margin-top: 15%;
+  }
+  @media (max-width: 640px) {
+    font-size: 1em;
+    margin-right: 25%;
+    margin-top: 15%;
+  }
 }
 
 .community-cards-group {
@@ -89,6 +118,23 @@
 
 .community-card:hover {
   box-shadow: 0 0 10px 4px #c28502;
+}
+
+.community-card {
+  background-color: #a9a9a9;
+  border-radius: 5px;
+  height: 10vh;
+  margin: 2%;
+  width: 8vh;
+  transition: box-shadow 0.2s ease;
+  @media (max-width: 740px) {
+    height: 8vh;
+    width: 6vh;
+  }
+  @media (max-width: 640px) {
+    height: 7vh;
+    width: 5vh;
+  }
 }
 
 .below-table-content {
@@ -113,6 +159,10 @@
   border: 4px solid #c28502;
   border-radius: 10px;
   transition: background-color 0.3s ease;
+  @media (max-width: 740px) {
+    font-size: 0.5em;
+    border: 3px solid #c28502;
+  }
 }
 
 .reset-button:hover {
@@ -144,6 +194,10 @@
   width: 13%;
   font-size: 1.3em;
   transition: box-shadow 0.2s ease;
+  @media (max-width: 740px) {
+    font-size: 0.5em;
+    margin: 1.5%;
+  }
 }
 
 .deck-card:hover {
@@ -161,6 +215,9 @@
   border-radius: 10px;
   width: 20%;
   background-color: #800000;
+  @media (max-width: 740px) {
+    font-size: 0.5em;
+  }
 }
 
 .chat-bot {
@@ -176,6 +233,11 @@
   border-radius: 10px;
   margin-top: 2%;
   padding-top: 2%;
+  @media (max-width: 740px) {
+    font-size: 1em;
+    padding-bottom: 0.5%;
+    margin-bottom: 1%;
+  }
 }
 
 .note {
@@ -183,6 +245,9 @@
   width: 80%;
   text-align: center;
   padding-top: 1%;
+  @media (max-width: 740px) {
+    font-size: 0.3em;
+  }
 }
 
 .output {
@@ -199,6 +264,9 @@
   text-align: center;
   margin-top: 2%;
   margin-left: 1%;
+  @media (max-width: 740px) {
+    font-size: 0.4em;
+  }
 }
 
 .input-container {
@@ -237,7 +305,7 @@
 
 .submit-button {
   background-color: black;
-  width: 8%;
+  width: 10%;
   height: 30%;
   color: #c28502;
   border-radius: 10px;
@@ -247,6 +315,12 @@
   font-weight: bold;
   margin-bottom: 1.5%;
   margin-right: 1%;
+  @media (max-width: 740px) {
+    font-size: 0.1em;
+    width: 10%;
+    height: 20%;
+    padding-right: 10%;
+  }
 }
 
 .submit-button:hover {
@@ -265,6 +339,9 @@
   padding: 5%;
   font-size: 1.7em;
   flex-direction: row;
+  @media (max-width: 740px) {
+    font-size: 0.8em;
+  }
 }
 
 .descriptions-content {
@@ -307,15 +384,6 @@
 
 .active-card:hover {
   box-shadow: 0 0 10px 4px #c28502;
-}
-
-.community-card {
-  background-color: #a9a9a9;
-  border-radius: 5px;
-  height: 10vh;
-  margin: 2%;
-  width: 8vh;
-  transition: box-shadow 0.2s ease;
 }
 
 .selected-card {
@@ -367,6 +435,10 @@
   font-size: 1em;
 }
 
+.probability {
+  font-size: 1.5em;
+}
+
 .player-6:nth-child(1) {
   transform: translate(120%, 180%) translate(400px);
   width: 11%;
@@ -392,35 +464,36 @@
   width: 11%;
 }
 
-.player-8:nth-child(1) {
-  transform: translate(570%, 170%);
+.player-8:nth-child(9) {
+  transform: translate(420%, -710%);
   width: 11%;
 }
+
 .player-8:nth-child(2) {
-  transform: translate(230%, 70%);
+  transform: translate(200%, 45%);
   width: 11%;
 }
 .player-8:nth-child(3) {
-  transform: translate(-45%, -80%);
+  transform: translate(-185%, -60%);
   width: 11%;
 }
 .player-8:nth-child(4) {
-  transform: translate(-45%, -305%);
+  transform: translate(-445%, -215%);
   width: 11%;
 }
 .player-8:nth-child(5) {
-  transform: translate(230%, -465%);
+  transform: translate(-445%, -435%);
   width: 11%;
 }
 .player-8:nth-child(6) {
-  transform: translate(570%, -565%);
+  transform: translate(-185%, -590%);
   width: 11%;
 }
 .player-8:nth-child(7) {
-  transform: translate(850%, -595%);
+  transform: translate(200%, -690%);
   width: 11%;
 }
 .player-8:nth-child(8) {
-  transform: translate(850%, -575%);
+  transform: translate(420%, -735%);
   width: 11%;
 }
