changed background color

--- a/src/App.css
+++ b/src/App.css
@@ -518,6 +518,15 @@ body {
   flex-direction: column;
 }
 
+body {
+  background-color: black;
+
+  padding-top: env(safe-area-inset-top, 0px);
+  padding-right: env(safe-area-inset-right, 0px);
+  padding-bottom: env(safe-area-inset-bottom, 0px);
+  padding-left: env(safe-area-inset-left, 0px);
+}
+
 .logo {
   width: 60%;
   display: flex;
