chnged background color

--- a/src/App.css
+++ b/src/App.css
@@ -519,8 +519,7 @@ body {
 }
 
 body {
-  background-color: black;
-
+  background-image: url("./images/pokerwallpaper.png");
   padding-top: env(safe-area-inset-top, 0px);
   padding-right: env(safe-area-inset-right, 0px);
   padding-bottom: env(safe-area-inset-bottom, 0px);
