--- a/src/App.css
+++ b/src/App.css
@@ -282,7 +282,7 @@ body {
 
 .submit-button {
   background-color: black;
-  width: 10%;
+  width: 8%;
   height: 30%;
   color: #c28502;
   border-radius: 10px;
@@ -291,7 +291,6 @@ body {
   transition: box-shadow 0.3s ease;
   font-weight: bold;
   margin-bottom: 1.5%;
-  margin-right: 1%;
 }
 
 .submit-button:hover {
@@ -392,7 +391,6 @@ body {
   flex-direction: column;
   font-size: 0.6em;
   text-shadow: 5px 5px 10px #c28502;
-  width: 1000px;
   @media (max-width: 1100px) {
     font-size: 0.4em;
     padding-bottom: 5%;
@@ -402,16 +400,20 @@ body {
 .player-button {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  justify-content: center;
 }
 
 .add-player-button {
   border-radius: 50px;
   box-shadow: 2px 2px 10px 0.5px #c28502;
-  width: 27%;
+  width: 20%;
   height: 50%;
   margin-top: 15%;
   font-weight: bold;
-  font-size: 1em;
+  font-size: 0.5em;
+  border-color: transparent;
+  margin-left: 10%;
 }
 
 .probability {
