--- a/src/App.css
+++ b/src/App.css
@@ -409,11 +409,15 @@ body {
   box-shadow: 2px 2px 10px 0.5px #c28502;
   width: 20%;
   height: 50%;
-  margin-top: 15%;
+  margin-top: 10%;
   font-weight: bold;
   font-size: 0.5em;
   border-color: transparent;
-  margin-left: 10%;
+  margin-left: 8%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .probability {
