--- a/src/App.css
+++ b/src/App.css
@@ -400,24 +400,28 @@ body {
 .player-button {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 100px;
   justify-content: center;
 }
 
 .add-player-button {
   border-radius: 50px;
   box-shadow: 2px 2px 10px 0.5px #c28502;
-  width: 20%;
-  height: 50%;
+  width: 20px;
+  height: 20px;
   margin-top: 10%;
   font-weight: bold;
-  font-size: 0.5em;
+  font-size: 1em;
   border-color: transparent;
   margin-left: 8%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  @media (max-width: 1100px) {
+    width: 15px;
+    height: 15px;
+  }
 }
 
 .probability {
